# pg2

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.txt  Mesh.hpp  Model.hpp  OBJloader.cpp  OBJloader.hpp  Physics.cpp  Physics.hpp  README.md  ShaderProgram.cpp  ShaderProgram.hpp  Spline.hpp  Texture.cpp  Texture.hpp  app.cpp  app.hpp  app_log.txt  assets.hpp  basic_core.vert  billboard.frag  billboard.vert  camera.hpp  config.json  hello.cpp  helloworld.cpp  main.cpp  particle.frag  particle.vert  post_process.frag  post_process.vert  run.bat  setup_assets.sh  shader.frag  shader.vert  skybox.vert  start.bat  start.sh  tests.cpp  (+4 more)
assets/Whiskey/: MushroomPotion.mtl
assets/rango/source/: Rango.mtl  untitled.dae
build_new/: Makefile  pg2
